# wg_activity_notify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yml.example
.github/workflows/: dev-release.yml  release.yml  tagged-release.yml
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  wg.rs
core/src/notifications/: discord.rs  mod.rs  pushover.rs
daemon/: Cargo.toml
daemon/src/: main.rs
