[package]
name = "wg_activity_notify_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
tracing = "^0.1"
serde = { version = "^1.0", features = ["derive"]}
serde_yaml = "^0.8"
toml = "^0.5"
regex = "^1.5"
reqwest = { version = "^0.12", features = ["blocking", "json"]}
thiserror = "^1.0"